--- a/paper/main.tex
+++ b/paper/main.tex
@@ -47,10 +47,15 @@
 \title{MicroSims: A Framework for AI-Generated, Scalable Educational Simulations with Universal Embedding and Adaptive Learning Support}
 
 \author{
+    Valerie Lockhart \\
+    \texttt{valockhart@gmail.com}
+    % Add additional authors and affiliations as needed
+    \and
     Dan McCreary \\
     \texttt{dan.mccreary@gmail.com}
     % Add additional authors and affiliations as needed
 }
+
 
 \date{\today}
 
