--- a/paper/sections/07-metadata.tex
+++ b/paper/sections/07-metadata.tex
@@ -3,13 +3,16 @@
 
 % TODO: Extract content from docs/chapters/describing-a-microsim.md
 % Key sections to include:
-% - Dublin Core metadata framework
-% - Educational metadata components
-% - Technical specifications
-% - Simulation model documentation
-% - Learning analytics support
-% - Discovery and personalization
-% - JSON Schema structure
+% - Search and Reuse: You can't reuse what you can't find - why AI needs great templates, the power of faceted search
+% - Dublin Core metadata framework using standard element to describe microsim resources
+% - Educational metadata components - adding subject, educational level, interactivity type
+% - Technical specifications - JSON Schema for microsim metadata
+% - Simulation model documentation - list of controls, parameters, outputs for event monitoring
+% - Learning analytics support - using the xAPI to track user interactions
+% - Discovery and personalization - enabling search, filtering, and recommendations
+% - JSON Schema structure - defining required and optional fields - how generative AI can generate precise metadata if the schema is correctly designed
+
+\subsection{Search and Reuse}
 
 \subsection{Metadata Requirements}
 
@@ -19,8 +22,11 @@
 
 \subsubsection{Technical Specifications}
 
+\subsubsection{Simulation Model Documentation}
+
 \subsection{Discovery and Cataloging}
 
 \subsection{Learning Analytics Integration}
 
+\subsection{JSON Schema Structure}
 % Additional content to be extracted from source files
